Added title animation.

--- a/src/style.css
+++ b/src/style.css
@@ -13,3 +13,20 @@ html, body {
     left: 0;
     outline: none;
 }
+
+#container {
+    z-index: 2;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#title {
+    color: #ffffff;
+    font-size: 0;
+}
