--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "Basement";
+    src: url("./assets/fonts/BasementGrotesque-Black_v1.202.otf");
+}
